k8s/service-reed.yaml
apiVersion: v1
kind: Service
metadata:
  name: ht-service-read
  namespace: ht
  labels:
    app: ht-read-app
spec:
  selector:
    app: ht-read-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
