k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ht
  name: ingress-ht
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /api/v1/write
          pathType: Prefix
          backend:
            service:
              name: ht-service-write
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ht-service-read
              port:
                number: 8081
